--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "express": "3.4.7",
     "jade": "*",
     "swig": "~1.3.2",
-    "node-sass": "~0.8.1",
+    "node-sass": "~0.8.1"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
