--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "dependencies": {
     "express": "3.4.7",
     "jade": "*",
-    "swig": "~1.3.2",
-    "node-sass": "~0.8.1"
+    "node-sass": "~0.8.1",
+    "nunjucks": "^2.4.2",
+    "swig": "~1.3.2"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
